# librave

./: CMakeLists.txt  Makefile  README.md
include/: rave.h
include/rave/: errno.h
src/: CMakeLists.txt  binary.c  binary.h  compiler.h  function.h  list.h  log.h  memory.h  metadata.c  metadata.h  metadata_dwarf.c  random.c  random.h  rave.c  section.c  segment.c  transform.c  transform.h  util.h  window.c  window.h
test/: CMakeLists.txt  code_mapping.c  dump_text.c  rewrite.c  simple.c
